--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,20 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brent's Profile</title>
+</head>
+<body>
+  <h1>Contact Me</h1>
+  <p>Tel: +090-9181-7898</p>
+  <p>Email: brent@gmail.com</p>
+  <p>Address:</p>
+  <p>
+  Nosoko<br />
+  Ishigaki<br />
+  Japan <br />
+  </p>
+</body>
+</html>
