--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,20 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brent's Profile</title>
+</head>
+<body>
+    <h1>The Undisputed Best Movies Ever</h1>
+    <hr />
+    <h3>Kung Fu Panda</h3>
+    <p>Skadoosh.</p>
+    <img src="../assets/tailung.png" alt="Tai Lung">
+    <h3>The Matrix</h3>
+    <p>The whole trilogy really.</p>
+    <h3>Avengers End Game</h3>
+    <p>They nailed it.</p>
+</body>
+</html>
